<resources>
    <string name="app_name">MusicPlayer</string>
    <string name="Seccion_Musica">Música</string>
    <string name="Seccion_Playlist">Playlist</string>
    <string name="Seccion_Podcast">Podcast</string>
    <string name="NombreDeCancion1">Está Noche</string>
    <string name="ArtistaDeCancion1">Kevin Kaarl</string>
    <string name="AlbumDeCancion1">Está Noche</string>
    <string name="NombreDeCancion2">We Are The People</string>
    <string name="ArtistaDeCancion2">Empire of the Sun</string>
    <string name="AlbumDeCancion2">Walking on a Dream</string>
    <string name="NombreDeCancion3">Smells Like Teen Spirit</string>
    <string name="ArtistaDeCancion3">Nirvana</string>
    <string name="AlbumDeCancion3">Nevermind</string>
    <string name="NombreDeCancion4">I Like The Way You Kiss Me</string>
    <string name="ArtistaDeCancion4">Artemas</string>
    <string name="AlbumDeCancion4">Yustyna</string>
    <string name="NombreDeCancion5">Ahora te puedes marchar</string>
    <string name="ArtistaDeCancion5">Luis Miguel</string>
    <string name="AlbumDeCancion5">Soy como quiero ser</string>
    <string name="ModoAleatorio">Aleatorio</string>
    <string name="ModoRepeticion">Repetir</string>
    <string name="DescripcionApp">Reproductor de Musica.\n© Todos los derechos reservados.\n\n</string>
    <string name="RedesSociales">MusicPlayer</string>
    <string name="Facebook">MusicPlayer</string>
</resources>